# accounting-automation-demo

./: .gitignore  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
scripts/: run_demo.py  verify_email_flow.py  verify_exact_flow.py
src/agents/: base.py  blue10_uploader.py  email_fetcher.py  entry.py  exact_uploader.py  excel_entry.py  extraction.py
src/api/: dashboard.py
src/api/pages/: accounting_rules.py  automation_overview.py  how_it_works.py
src/data/: mock_bpost_extraction.json
src/domain/: interfaces.py  models.py
src/infrastructure/: ai_document_processor.py  blue10_connector_v2.py  excel_connector.py  knowledge_base.py  local_document_processor.py  mock_connectors.py  open_router_connector.py  outlook_connector.py
src/orchestration/: email_to_blue10_workflow.py  email_to_exact_workflow.py  workflow_engine.py
tests/: test_blue10_connector.py  test_excel.py  test_outlook_connector.py  test_workflow.py
